--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
-  <title>the prototype</title>
+  <title>Fisher's Friend</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -13,21 +13,12 @@
 </head>
 <body>
   <nav class="navbar transparent">
-   <div class="container-fluid">
-     <div class="navbar-header">
-       <!-- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-         <span class="sr-only">Toggle navigation</span>
-         <span class="icon-bar"></span>
-         <span class="icon-bar"></span>
-         <span class="icon-bar"></span>
-       </button> -->
-       <!-- <a href="index.html" class="navbar-brand"><img style="max-width:100px; margin-top: -7px;" src="http://awsassets.wwf.org.za/img/original/fish4life_logo.png" /></a> -->
-       <!--    <a class="navbar-brand" href="http://awsassets.wwf.org.za/img/original/fish4life_logo.png" alt="logo">
-     </a> -->
-   </div>
-   <button class="btn btn-default navbar-btn pull-right" data-toggle="modal" data-target="#myModal" style="background-color:#827D79; color:#fff">Join Fisherman</button>
- </div>
-</nav>
+    <div class="container-fluid">
+      <div class="navbar-header">
+      </div>
+      <button class="btn btn-default navbar-btn pull-right" data-toggle="modal" data-target="#myModal" style="background-color:#827D79; color:#fff">Join Fisherman</button>
+    </div>
+  </nav>
   <div id="carousel-banner" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carousel-banner" data-slide-to="0" class="active"></li>
@@ -77,114 +68,101 @@
       <div class="col-xs-12 col-sm-6">
         <div class="feature">
           <h5>Keep Fishing Diary</h5>
-          <a href="diary.html"><i class="fa fa-book fa-5x" aria-hidden="true"></i></a>
+          <a href="diary.php"><i class="fa fa-book fa-5x" aria-hidden="true"></i></a>
         </div>
       </div>
     </div>
     <div class="row ad">
-    <h5>You may also want to check</h5>
-    <br>
-    <div class="col-xs-3">
-          <img src="images/logo.png" alt="..." class="img-thumbnail">
+      <h5>You may also want to check</h5>
+      <br>
+      <div class="col-xs-3">
+        <img src="images/logo.png" alt="..." class="img-thumbnail">
+      </div>
+      <div class="col-xs-3">
+        <img src="images/logo.png" alt="..." class="img-thumbnail">
+      </div>
+      <div class="col-xs-3">
+        <img src="images/logo.png" alt="..." class="img-thumbnail">
+      </div>
+      <div class="col-xs-3">
+        <img src="images/logo.png" alt="..." class="img-thumbnail">
+      </div>
     </div>
-    <div class="col-xs-3">
-          <img src="images/logo.png" alt="..." class="img-thumbnail">
-    </div>
-    <div class="col-xs-3">
-    <img src="images/logo.png" alt="..." class="img-thumbnail">
-    </div>
-    <div class="col-xs-3">
-    <img src="images/logo.png" alt="..." class="img-thumbnail">
-    </div>
-
-  </div>
-  <!-- <div class="row">
-    <div class="col-xs-12 footer">
-      Copyright 2016.  Fisherman with &hearts;
-    </div>
-  </div> -->
   </div>
 
   <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
-aria-hidden="true">
-<div class="modal-dialog modal-lg">
-  <div class="modal-content">
-    <div class="modal-header">
-      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-      <h4 class="modal-title" id="myModalLabel">Sign in/ Sign up</h4>
-    </div>
-    <div class="modal-body">
-      <div class="row">
-        <div class="col-md-8" style="border-right: 1px dotted #C2C2C2;padding-right: 30px;">
-          <!-- Nav tabs -->
-          <!-- <ul class="nav nav-tabs">
-            <li class="active"><a href="#Login" data-toggle="tab">Sign in</a></li>
-            <li><a href="#Registration" data-toggle="tab">Sign up</a></li>
-          </ul> -->
-          <!-- Tab panes -->
-          <div class="tab-content">
-            <div class="tab-pane active" id="Login">
-              <form role="form" class="form-horizontal" data-toggle="validator">
-                <div class="form-group">
-                  <label for="signinEmail" class="col-sm-2 control-label">
-                    Email</label>
-                    <div class="col-sm-10">
-                      <input type="email" class="form-control" id="signinEmail" placeholder="email" required />
-                    </div>
-                  </div>
+  aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+        <h4 class="modal-title" id="myModalLabel">Sign in/ Sign up</h4>
+      </div>
+      <div class="modal-body">
+        <div class="row">
+          <div class="col-md-8" style="border-right: 1px dotted #C2C2C2;padding-right: 30px;">
+            <!-- Tab panes -->
+            <div class="tab-content">
+              <div class="tab-pane active" id="Login">
+                <form role="form" class="form-horizontal" data-toggle="validator">
                   <div class="form-group">
-                    <label for="signinPass" class="col-sm-2 control-label">
-                      Password</label>
+                    <label for="signinEmail" class="col-sm-2 control-label">
+                      Email</label>
                       <div class="col-sm-10">
-                        <input type="password" class="form-control" id="signinPass" placeholder="password" required />
+                        <input type="email" class="form-control" id="signinEmail" placeholder="email" required />
                       </div>
                     </div>
-                    <div class="row">
-                      <div class="col-sm-2">
-                      </div>
-                      <div class="col-sm-10">
-                        <button id="signinBtn" class="btn btn-primary btn-sm">
-                          Sign in</button>
+                    <div class="form-group">
+                      <label for="signinPass" class="col-sm-2 control-label">
+                        Password</label>
+                        <div class="col-sm-10">
+                          <input type="password" class="form-control" id="signinPass" placeholder="password" required />
                         </div>
                       </div>
-                    </form>
-                  </div>
-                  <div class="tab-pane" id="Registration">
-                    <form role="form" class="form-horizontal" data-toggle="validator">
-                      <div class="form-group">
-                        <label for="signupEmail" class="col-sm-2 control-label">
-                          Email</label>
-                          <div class="col-sm-10">
-                            <input type="email" class="form-control" id="signupEmail" placeholder="email" required/>
+                      <div class="row">
+                        <div class="col-sm-2">
+                        </div>
+                        <div class="col-sm-10">
+                          <button id="signinBtn" class="btn btn-primary btn-sm">
+                            Sign in</button>
                           </div>
                         </div>
+                      </form>
+                    </div>
+                    <div class="tab-pane" id="Registration">
+                      <form role="form" class="form-horizontal" data-toggle="validator">
                         <div class="form-group">
-                          <label for="signupPass" class="col-sm-2 control-label">
-                            Password</label>
+                          <label for="signupEmail" class="col-sm-2 control-label">
+                            Email</label>
                             <div class="col-sm-10">
-                              <input type="password" data-minlength="6" class="form-control" id="signupPass" placeholder="password" required />
-                              <div class="help-block">Minimum of 6 characters</div>
+                              <input type="email" class="form-control" id="signupEmail" placeholder="email" required/>
                             </div>
                           </div>
                           <div class="form-group">
-                            <label for="inputPasswordConfirm" class="col-sm-2 control-label">
-                              Confirm password</label>
+                            <label for="signupPass" class="col-sm-2 control-label">
+                              Password</label>
                               <div class="col-sm-10">
-                                <input type="password" class="form-control" id="inputPasswordConfirm" data-match="#signupPass" data-match-error="Whoops, these don't match" placeholder="confirm password" required>
-                                <div class="help-block with-errors"></div>
+                                <input type="password" data-minlength="6" class="form-control" id="signupPass" placeholder="password" required />
+                                <div class="help-block">Minimum of 6 characters</div>
                               </div>
                             </div>
-                            <div class="row">
-                              <!-- <div class="col-sm-2">
-                              </div> -->
-                              <div class="offset-sm-2 col-sm-10">
-                                <button id="signupBtn" class="btn btn-primary btn-sm" style="margin-left:10px">
-                                  Sign up</button>
+                            <div class="form-group">
+                              <label for="inputPasswordConfirm" class="col-sm-2 control-label">
+                                Confirm password</label>
+                                <div class="col-sm-10">
+                                  <input type="password" class="form-control" id="inputPasswordConfirm" data-match="#signupPass" data-match-error="Whoops, these don't match" placeholder="confirm password" required>
+                                  <div class="help-block with-errors"></div>
                                 </div>
                               </div>
-                            </form>
+                              <div class="row">
+                                <div class="offset-sm-2 col-sm-10">
+                                  <button id="signupBtn" class="btn btn-primary btn-sm" style="margin-left:10px">
+                                    Sign up</button>
+                                  </div>
+                                </div>
+                              </form>
+                            </div>
                           </div>
-                        </div>
 
                         </div>
                         <div class="col-md-4">
@@ -196,8 +174,7 @@ aria-hidden="true">
                               <div class="col-md-12">
                                 <div class="btn-group btn-group-justified">
                                   <a href="#" class="btn btn-primary">Facebook</a>
-                                 <a href="#" class="btn btn-danger">Google</a>
-                                  </div>
+                                  <a href="#" class="btn btn-danger">Google</a>
                                 </div>
                               </div>
                             </div>
@@ -206,10 +183,11 @@ aria-hidden="true">
                       </div>
                     </div>
                   </div>
+                </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
-  <script src="js/functions.js"></script>
+
 </body>
 </html>
